kubernetes/backend_cart/backend-cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-cart
  labels:
    app: backend-cart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-cart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend-cart
    spec:
      containers:
        - name: backend-cart
          image: annasel/cart_service:latest
          ports:
            - containerPort: 5002
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 5002
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 5002
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
