kubernetes/backend_cart/backend-cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cart
  labels:
    app: backend-cart
  annotations:
    prometheus.io/scrape: "true" # Określa, że Prometheus ma zbierać metryki z tej usługi
    prometheus.io/port: "5002" # Określa port, z którego Prometheus ma pobierać metryki
spec:
  type: ClusterIP
  selector:
    app: backend-cart
  ports:
    - name: http
      port: 5002
      targetPort: 5002
